[gd_scene load_steps=10 format=3 uid="uid://cg3uey5bsrups"]

[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://proto_controller/proto_controller.tscn" id="1_8gbba"]
[ext_resource type="Script" uid="uid://nm62bcecf528" path="res://Scripts/main.gd" id="1_kry3j"]
[ext_resource type="Script" uid="uid://d0kb4cywr50iq" path="res://proto_controller/proto_controller.gd" id="2_jjvhh"]
[ext_resource type="Script" uid="uid://bramfpogednyl" path="res://Scripts/Spawn_script.gd" id="3_kry3j"]
[ext_resource type="Script" uid="uid://c654cdidquxwf" path="res://Scenes/hex_grid_generation.gd" id="5_kry3j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0xm2m"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_h2yge"]
sky_material = SubResource("ProceduralSkyMaterial_0xm2m")

[sub_resource type="Environment" id="Environment_1bvp3"]
background_mode = 2
sky = SubResource("Sky_h2yge")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_kry3j"]

[node name="Main" type="Node3D"]
script = ExtResource("1_kry3j")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1bvp3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 35.9, 0)
shadow_enabled = true

[node name="ProtoController" parent="." instance=ExtResource("1_8gbba")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 4.8, 6.6, 13.900001)
script = ExtResource("2_jjvhh")
can_sprint = true
input_left = "move_left"
input_right = "move_right"
input_forward = "move_forward"
input_back = "move_backwards"
input_jump = "jump"

[node name="Camera3D" type="Camera3D" parent="ProtoController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 5)
current = true

[node name="Spawn Area" type="Node3D" parent="ProtoController"]
script = ExtResource("3_kry3j")

[node name="Point1" type="Node3D" parent="ProtoController/Spawn Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 3.154, 10.222)

[node name="Point2" type="Node3D" parent="ProtoController/Spawn Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.714106, 2.110667, -9.000111)

[node name="Timer" type="Timer" parent="ProtoController/Spawn Area"]
wait_time = 0.7
autostart = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
navigation_mesh = SubResource("NavigationMesh_kry3j")

[node name="HexGridGeneration" type="Node3D" parent="NavigationRegion3D"]
script = ExtResource("5_kry3j")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HitRect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = -1774.0
offset_top = -1073.0
offset_right = 2756.0
offset_bottom = 1548.0
color = Color(0.75686276, 0.07450981, 0.22352941, 0.39215687)

[connection signal="player_hit" from="ProtoController" to="." method="_on_proto_controller_player_hit"]
[connection signal="timeout" from="ProtoController/Spawn Area/Timer" to="ProtoController/Spawn Area" method="_on_timer_timeout"]
